Fix staging alert z-index

--- a/app/styles/components/_alerts.scss
+++ b/app/styles/components/_alerts.scss
@@ -12,4 +12,5 @@
   left: 15px;
   width: 170px;
   border-radius: 5px;
+  z-index: $zIndex--staging-alert;
 }
